# roomba_ROS2

./: CMakeLists.txt  README.md  package.xml
launch/: empty_world.launch.py  ros_bag.launch.py  spawn_turtlebot3.launch.py  turtlebot3_house.launch.py  turtlebot3_world.launch.py
models/turtlebot3_waffle_pi/: model.sdf
results/: cppcheck.txt  cpplint.txt
src/: obstacle_avoidance.cpp
