<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roomba_ros2</name>
  <version>0.0.0</version>
  <description>Simple turtlebot3 navigator to avoid obstacles</description>
  <maintainer email="marora1@umd.edu">mahima</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
